Cleaned up Bot & fixed bugs